--- a/covid.css
+++ b/covid.css
@@ -15,3 +15,48 @@
 .custom-div {
     text-align: center;
 }
+
+.filter-btn {
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 1rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    color: #000000;
+    font-size: 0.75rem;
+    background-color: #ffffff;
+    margin-bottom: 0.25rem;
+    margin-left: 0.25rem;
+    background-color: #3e4086;
+    color: #ffffff;
+    padding: 0px 3px;
+    font-size: 1rem;
+}
+
+.card-body {
+    padding-left: 0px !important;
+    padding-bottom: 0px !important;
+    max-height: 500px;
+    overflow: auto;
+}
+
+.card {
+    width: 100%;
+}
+
+.search-icon {
+    float: right;
+    margin-right: 6px;
+    margin-top: -26px;
+    position: relative;
+    z-index: 2;
+    background-color: #ffffff;
+    padding-left: 4px;
+    padding-bottom: 4px;
+}
