--- a/covid.css
+++ b/covid.css
@@ -33,8 +33,8 @@
     background-color: #ffffff;
     margin-bottom: 0.25rem;
     margin-left: 0.25rem;
-    background-color: #3e4086;
-    color: #ffffff;
+    background-color: #fef6ab;
+    color: #000000;
     padding: 0px 3px;
     font-size: 1rem;
 }
