--- a/covid.css
+++ b/covid.css
@@ -40,6 +40,10 @@
     border-bottom: 0.025px solid #d7d7d7;
 }
 
+.card-heading {
+    margin: 0.5rem 0;
+}
+
 .card-body {
     padding-left: 0px !important;
     padding-bottom: 0px !important;
